--- a/CodificaLista03/assets/css/main.css
+++ b/CodificaLista03/assets/css/main.css
@@ -139,9 +139,13 @@ dialog ul li{
     height: 100%;
     width: 100%;
     min-height: 300px;
-    object-fit: cover;
+    object-fit: fill;
     padding: 5rem;
-    background: url("../images/aprenderImg.webp");
+    background: url(../images/aprenderImg.webp);
+        background-attachment: fixed;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
 }
 .aprenderTxt{
     margin: 0 auto;
@@ -253,7 +257,7 @@ dialog ul li{
 }
 .carouselFotos {
     position: relative;
-    height: 400px;
+    height: 500px;
     width: 80%;
     margin: 0 auto;
 }
@@ -316,7 +320,56 @@ dialog ul li{
 /* Carousel Fotos Fim*/
 
 /*Recursos Inicio*/
-
+#recursos h3 {
+    display: block;
+    text-align: center;
+    width: 100%;
+    background-color: #306998;
+    padding: 0.5rem 0.3rem 0.3rem 0.3rem;
+    color: #FFD742;
+    text-shadow: 1px 1px 2px #000;
+}
+#recursos {
+    position: relative;
+}
+.bgRec {
+    height: 100%;
+    width: 100%;
+    min-height: 300px;
+    padding: 5rem;
+    background: url("../images/programer.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.recursosContent {
+    margin: 0 auto;
+    padding: 1rem;
+    width: fit-content;
+    height: fit-content;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.recContentItem {
+    margin: 1rem;
+}
+.recContentItem:hover {
+    color: #FFD742;
+    background-color: rgb(0,0,0, 0.6);
+    text-shadow: 1px 1px 1px #000;
+    margin: 1rem;
+    padding: 1.5rem;
+    text-align: center;
+    font-size: large;
+}
+.recImgDiv{
+    float: left;
+    margin-right: 1rem;
+    width: 50px;
+    height: 50px;
+}
+.recImgDiv img {
+    width: 100%;
+}
 /* Recuersos Fim */
 
 /* Sec-1 Fim */
@@ -338,7 +391,7 @@ dialog ul li{
     color: #FFD742;
     box-shadow: 0 0 1rem 1rem rgb(0,0,0, 0.6);
     text-shadow: 1px 1px 2px #000;
-    margin-top: 1rem;
+    padding-top: 1.5rem;
 }
 .depoimentosCards {
     background-color: #306998;
@@ -349,10 +402,10 @@ dialog ul li{
     background-color: #306998;
     box-shadow:  0 0 1rem 1rem rgb(0, 0, 255, 0.8);
     width: 300px;
-    height: 380px;
+    height: 410px;
     display: block;
     padding: 1.5rem;
-    border-radius: 15px  15px 90px 90px;
+    border-radius: 15% 15% 30% 30%;
 }
 .depoimentoCard h4 {
     float: right;
@@ -363,6 +416,7 @@ dialog ul li{
 }
 .depoimentoCard p {
     clear: both;
+    font-size: large;
 }
 .imgDepDiv{
     float: left;
