site ajuste no css

--- a/CodificaLista03/assets/css/main.css
+++ b/CodificaLista03/assets/css/main.css
@@ -3,9 +3,11 @@
     height: 80%;
     background-color: #efefef;
 }
+
 .clear{
     clear: both; 
 }
+
 .mudaCorBot{
     width: 100%;
     height: 10px;
@@ -16,6 +18,7 @@
 #toTopImg {
     width: 40px;
 }
+
 #btnToTop {
     margin: 0;
     padding: 0;
@@ -27,15 +30,17 @@
 }
 
 /* toTop Fim */
-/* cpythonMin Inicio*/
+/* MiniTitulo Inicio*/
 
 .cpythonMin #letraLogo{
     color: #306998;
 }
+
 .cpythonMin #letraComun {
     color: #000;
     font-weight: 1100;
 }
+
 .cpythonMin {
     text-align: center;
     font-size: larger;
@@ -45,440 +50,4 @@
     display: none;
 }
 
-/* cpythonMin Fim */
-
-/* Sec-1 Inicio */
-/* pq Python Inicio */
-
-.pqPython{
-    margin: 2rem 4rem 1rem 4rem;
-    padding: 1rem;
-    border-radius: 25px;
-    background-color: #306998;
-    box-shadow: 0 0 1rem 0.2rem rgb(0,0,0, 0.5);
-}
-.pqPython h3{
-    margin-bottom: 0.25rem;
-}
-.pqPython .mais{
-    text-align: right;
-}
-.pqPython .mais a{
-    text-decoration: none;
-    font-weight: 600;
-    color: #FFD742;
-}
-
-/* Modal Dialog Inicio */
-
-dialog::backdrop{
-    background-color: rgb(0, 0, 0, 0.7);
-}
-dialog {
-
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 0 1em rgb(0, 0, 0, .8);
-    padding: 3rem;
-    margin: 4rem 4rem 2rem 4rem;
-}
-dialog .modalClose{
-    position: relative;
-    float: right;
-    padding: 0.4rem;
-    font-size: medium;
-    background-color: #f1262d;
-    border-radius: 0.8rem;
-}
-dialog h3 {
-    text-decoration: underline;
-    text-align: center;
-}
-dialog h4 {
-    margin-top: 0.5rem;
-}
-dialog p {
-    margin-top: 0.3rem;
-    margin-left: 1.5rem;
-}
-dialog p strong{
-    margin-left: 1rem;
-}
-dialog ul li{
-    margin-top: 0.2rem;
-    margin-left: 3rem;
-}
-
-/* Modal Dialog Fim */
-/* pq Python Fim */
-
-/* o que Aprender Inicio */
-#oqaprender h3 {
-    display: block;
-    text-align: center;
-    width: 100%;
-    background-color: #306998;
-    padding: 0.3rem;
-    color: #FFD742;
-    box-shadow: 0 -0.8rem 1rem 1rem rgb(0,0,0, 0.6);
-    text-shadow: 1px 1px 2px #000;
-}
-#oqaprender strong{
-    text-align: left;
-    color: #FFD742;
-    text-shadow: 1px 1px 2px #000;
-    font-weight: 800;
-}
-#oqaprender p{
-    text-align: left;
-    margin: 0.5rem 0 1rem 1rem;
-    font-weight: 550;
-}
-.aprenderContent {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    min-height: 300px;
-    object-fit: fill;
-    padding: 5rem;
-    background: url(../images/aprenderImg.webp);
-        background-attachment: fixed;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-}
-.aprenderTxt{
-    margin: 0 auto;
-    padding: 1rem;
-    width: fit-content;
-    height: fit-content;
-    background-color: rgba(255, 255, 255, 0.5);
-}
-/* o que Aprender Fim */
-
-/* Conteudo Inicio */
-
-.conteudoCursoTitulo{
-    display: block;
-    text-align: center;
-    width: 100%;
-    background-color: #306998;
-    padding: 0.3rem;
-    color: #FFD742;
-    box-shadow: 0 0 1rem 1rem rgb(0,0,0, 0.6);
-    text-shadow: 1px 1px 2px #000;
-}
-.conteudoCurso {
-    padding: 2rem;
-    display: grid;
-    place-items: center;
-    background-color: #306998;
-    
-}
-.tableCards {
-    display: grid;
-    grid-template-columns: repeat(1fr, 1fr, 1fr);
-    width: 90%;
-    height: 100%;
-}
-.cardCont {
-    display: table-cell;
-    border: 5px solid #306998;
-    margin: 0.5rem;
-    border-radius: 2rem;
-    padding: 1rem;
-    height: 200px;
-    width: 300px;
-    background-color: #6fbeff;
-    box-shadow: 0 0 1rem 1rem rgb(0,0,0, 0.5);
-}
-.cardCont:hover{
-    border: 8px solid #000;
-    background-color: #FFD742;
-    box-shadow: 0 0 2rem 2rem rgb(0,0,0, 0.8);
-}
-.cardCont:hover  p{
-    font-weight: 700;
-}
-.cardCont:hover  h4 {
-    color: rgb(0,0,255);
-}
-.cardCont p {
-    text-align: center;
-    margin-top: 4rem;
-}
-.cardCont h4 {
-    text-align: center;
-}
-.card1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 1;
-}
-.card2 {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 1;
-}
-.card3 {
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 1;
-}
-.card4 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 2;
-    grid-row-end: 2;
-}
-.card5 {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 2;
-}
-.card6 {
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 2;
-}
-/* Conteudo Fim */
-
-/* Carousel Fotos Inicio*/
-.carouselBase {
-    width: 100%;
-    height: 100%;
-    background-color: #306998;
-    padding: 1rem 0 2rem 0;
-}
-.carouselFotos {
-    position: relative;
-    height: 500px;
-    width: 80%;
-    margin: 0 auto;
-}
-.carouselButton {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-}
-.carouselButton img {
-    width: 15px;
-}
-.carouselButtonLeft {
-    left: -30px;
-}
-.carouselButtonRight {
-    right: -30px;
-}
-.carouselContainer {
-    background: lightgreen;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-}
-.carouselTrack {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    height: 100%;
-    transition: transform 250ms ease-in;
-}
-.carouselSlide {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-}
-.carouselImgs {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 5px solid #FFD742;
-}
-.carouselNav {
-    background: rgb(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    padding: 0.2rem 0;
-}
-.carouselNavIndicator {
-    border: 0;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    background: rgb(0, 0, 0, .4);
-    margin: 0 1rem;
-    cursor: pointer;
-}
-.carouselNavIndicator.currentSlide{
-    background: rgb(0, 0, 0, .8);
-}
-/* Carousel Fotos Fim*/
-
-/*Recursos Inicio*/
-#recursos h3 {
-    display: block;
-    text-align: center;
-    width: 100%;
-    background-color: #306998;
-    padding: 0.5rem 0.3rem 0.3rem 0.3rem;
-    color: #FFD742;
-    text-shadow: 1px 1px 2px #000;
-}
-#recursos {
-    position: relative;
-}
-.bgRec {
-    height: 100%;
-    width: 100%;
-    min-height: 300px;
-    padding: 5rem;
-    background: url("../images/programer.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.recursosContent {
-    margin: 0 auto;
-    padding: 1rem;
-    width: fit-content;
-    height: fit-content;
-    background-color: rgba(255, 255, 255, 0.5);
-}
-.recContentItem {
-    margin: 1rem;
-}
-.recContentItem:hover {
-    color: #FFD742;
-    background-color: rgb(0,0,0, 0.6);
-    text-shadow: 1px 1px 1px #000;
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: center;
-    font-size: large;
-}
-.recImgDiv{
-    float: left;
-    margin-right: 1rem;
-    width: 50px;
-    height: 50px;
-}
-.recImgDiv img {
-    width: 100%;
-}
-/* Recuersos Fim */
-/* Sec-1 Fim */
-
-/* Sec-2 Inicio*/
-/* Depoimentos Inicio */
-.tituloDep{
-    display: block;
-    text-align: center;
-    width: 100%;
-    background-color: #306998;
-    padding: 0.3rem;
-    color: #FFD742;
-    box-shadow: 0 0 1rem 1rem rgb(0,0,0, 0.6);
-    text-shadow: 1px 1px 2px #000;
-    padding-top: 1.5rem;
-}
-
-/* Depoimentos Fim */
-/* Sec-2 Fim*/
-
-/* media Inicio */
-@media only screen and (max-width: 800px){
-    
-    /* .aprenderImg{
-        display: none;
-    }
-    .aprenderTxt{
-        width: 100%;
-    } */
-    .pqPython{
-        text-align: justify;
-    }
-    .cardCont {
-        display: table-cell;
-        border: 4px solid #306998;
-        margin: 0.5rem;
-        border-radius: 2rem;
-        padding: 1rem;
-        height: 200px;
-        width: 180px;
-    }
-    .cardCont p {
-        margin-top: 0.5rem;
-    }
-}
-
-@media only screen and (max-width: 600px){
-
-    .tableCards {
-        grid-template-columns: repeat(1fr, 1fr);
-    }
-    .cardCont {
-        border: 5px solid #306998;
-        height: 200px;
-        width: 200px;
-    }
-    .card1 {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 1;
-        grid-row-end: 1;
-    }
-    .card2 {
-        grid-column-start: 2;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 1;
-    }
-    .card3 {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 2;
-        grid-row-end: 2;
-    }
-    .card4 {
-        grid-column-start: 2;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 2;
-    }
-    .card5 {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 3;
-        grid-row-end: 3;
-    }
-    .card6 {
-        grid-column-start: 2;
-        grid-column-end: 2;
-        grid-row-start: 3;
-        grid-row-end: 3;
-    }
-}
-
-@media only screen and (max-width: 400px){
-    
-    .pqPython{
-        display: none;
-    }
-    .cpythonMin{
-        display: block;
-        background-color: #dfdfdf;
-        margin-top: 0;
-        margin-bottom: 0;
-    } 
-}
-/* media Fim */
+/* MiniTitulo Fim */
