--- a/CodificaLista03/assets/css/header.css
+++ b/CodificaLista03/assets/css/header.css
@@ -1,11 +1,10 @@
-
 header {
     padding: 0.5rem 0;
     height: 6rem;
-    background-color: #dfdfdf;
+    background-color: #bbbbbb;
     box-shadow: 0 0 1rem 0.2rem rgb(0,0,0, 0.5);
+    text-shadow: 1px 1px 2px #000;
 }
-
 #letraLogo{
     color: #306998;
 }
@@ -20,24 +19,20 @@ header {
     margin: 1rem 0 0 2rem;
     font-weight: 900;
 }
-
 .logoIcon{
     width: 3.4rem;
     height: 4rem;
     float: left;
     display: block;
 }
-
 .logo{
     display: block;
     float: left;
     margin: 0 0 0 5rem;
 }
-
 .btnHeader{
     float: right;
 }
-
 .btnHeader .btn {
     text-decoration: none;
     margin: 1rem 2rem 0 0;
@@ -48,23 +43,18 @@ header {
     border-radius: 5px;
     color: #fff;
 }
-
 .red {
     background-color: red;
 }
-
 .red:hover {
     background-color: #f1262d;
     color: #fff;
 }
-
-
 @media only screen and (max-width: 600px){
     .btnHeader{
         display: none;
     }
 }
-
 @media only screen and (max-width: 420px){
 
     .nomeLogo{
