--- a/CodificaLista03/assets/css/main.css
+++ b/CodificaLista03/assets/css/main.css
@@ -51,3 +51,105 @@
 }
 
 /* MiniTitulo Fim */
+
+
+.btnInscMain{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1rem;
+    opacity: 0;
+}
+.btnInscMain .btn {
+    display: block;
+    width: fit-content;
+    
+    text-decoration: none;
+    /* margin: 1rem 2rem 0 0; */
+    /* display: inline-block; */
+    margin: 0 auto;
+    padding: 0.8rem 0.5rem;
+    border: none;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    color: #fff;
+}
+
+@media only screen and (max-width: 600px){
+    .tableCards {
+        grid-template-columns: repeat(1fr, 1fr);
+    }
+    .cardCont {
+        border: 5px solid #306998;
+        height: 200px;
+        width: 200px;
+    }
+    .card1 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 1;
+    }
+    .card2 {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 1;
+    }
+    .card3 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 2;
+    }
+    .card4 {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 2;
+    }
+    .card5 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 3;
+        grid-row-end: 3;
+    }
+    .card6 {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 3;
+    }
+    .btnInscMain{
+        opacity: 1;
+        cursor: pointer;
+    }
+}
+@media only screen and (max-width: 400px){
+    .pqPython{
+        display: none;
+    }
+    .cpythonMin{
+        display: block;
+        background-color: #dfdfdf;
+        margin-top: 0;
+        margin-bottom: 0;
+    } 
+}
+@media only screen and (max-width: 800px){
+    .pqPython{
+        text-align: justify;
+    }
+    .cardCont {
+        display: table-cell;
+        border: 4px solid #306998;
+        margin: 0.5rem;
+        border-radius: 2rem;
+        padding: 1rem;
+        height: 200px;
+        width: 180px;
+    }
+    .cardCont p {
+        margin-top: 0.5rem;
+    }
+}
