--- a/CodificaLista03/assets/css/footer.css
+++ b/CodificaLista03/assets/css/footer.css
@@ -8,9 +8,12 @@ footer {
     height: 3rem;
     
 }
-
+footer p {
+    padding-bottom: 1rem;
+}
 footer p,
 footer h3 {
     text-align: center;
     margin-top: 0.8rem;
+    
 }
