--- a/CodificaLista03/assets/css/mainDepoimentos.css
+++ b/CodificaLista03/assets/css/mainDepoimentos.css
@@ -11,4 +11,48 @@
     padding-top: 1.5rem;
 }
 
+.depoimentos {
+    margin: 0.8rem auto;
+    width: 100%;
+    padding: 2rem;
+    max-width: 900px;
+    position: relative;
+    overflow: hidden;
+}
+.depoSlide {
+    padding: 40px 60px;
+    cursor: grab;
+}
+.depoSlide:active {
+    cursor: grabbing;
+}
+.depoIcon {
+    width: 50px;
+    opacity: 0.5;
+}
+
+.depoTxt{
+    font-weight: 300;
+    margin-bottom: 1rem;
+    text-indent: 15px;
+}
+
+.personImg, .infoPerson {
+    display: inline-block;
+    vertical-align: middle;
+}
+.personImg {
+    width: 80px;
+    height: 80px;
+}
+.infoPerson {
+    margin-left: 0.5rem;
+}
+.nomePerson {
+    font-weight: 600;
+}
+.funcPerson {
+    font-size: small;
+}
+
 /* Depoimentos Fim */
