--- a/CodificaAtividade04/assets/css/footer.css
+++ b/CodificaAtividade04/assets/css/footer.css
@@ -1,19 +1,26 @@
-footer hr {
-    clear: both;
+/* Footer Inicio */
+footer {
+    position: relative;
+    padding: 2rem 0 1.2rem 0;
+    /* background-color: #c8c8c8; */
 }
 
-footer {
-    background-color: #efefef;
-    opacity: 1;
-    height: 3rem;
-    
+footer h4{
+    text-transform: uppercase;
+    color: #505050;
+    font-size: 0.9rem;
+    /* text-shadow: 1px 1px 2px #000; */
 }
-footer p {
-    padding-bottom: 1rem;
+
+footer .navbar-nav a{
+    color: #fff;
+    text-decoration: none;
 }
-footer p,
-footer h3 {
-    text-align: center;
-    margin-top: 0.8rem;
-    
+footer ul li{
+    list-style: none;
 }
+
+footer ul li a img{
+    margin: 0 1rem;
+}
+/* Footer Fim */
