--- a/CodificaAtividade04/assets/css/all.css
+++ b/CodificaAtividade04/assets/css/all.css
@@ -26,7 +26,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #fefefe;
     padding-top: 70px;
-    background: linear-gradient(50deg, #306998, #FFD742);
+    background: linear-gradient(50deg, #306998 70%, #FFD742);
     background-attachment: fixed;
     overflow-x: hidden;
 }
