--- a/CodificaAtividade04/assets/css/main.css
+++ b/CodificaAtividade04/assets/css/main.css
@@ -3,7 +3,6 @@
 #toTopImg {
     width: 40px;
 }
-
 #btnToTop {
     margin: 0;
     padding: 0;
@@ -13,39 +12,15 @@
     bottom: 0;
     right: 0;
 }
-
 /* toTop Fim */
 
-.btnInscMain{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 1rem;
-    opacity: 0;
+/* Mods Txt I */
+.textCP{
+    color: #306998;
+    text-shadow: 1px 1px 2px #000;
 }
-.btnInscMain .btn {
-    display: block;
-    width: fit-content;
-    
-    text-decoration: none;
-    margin: 0 auto;
-    padding: 0.8rem 0.5rem;
-    border: none;
-    font-size: 1.4rem;
-    border-radius: 5px;
-    color: #fff;
+.textCY{
+    color: #FFD742;
+    text-shadow: 1px 1px 2px #000;
 }
-
-@media only screen and (max-width: 600px){
-    .btnInscMain{
-        opacity: 1;
-        cursor: pointer;
-    }
-    
-}
-@media only screen and (max-width: 400px){
-
-}
-@media only screen and (max-width: 800px){
-
-}
+/* Mods Txt F */
