--- a/CodificaAtividade04/assets/css/index.css
+++ b/CodificaAtividade04/assets/css/index.css
@@ -62,3 +62,98 @@
 
 /* Depoimentos Fim */
 
+/* Recursos Inicio */
+#divTextRec{
+    background: rgba(0,0,0,0.4);
+    width: auto;
+}
+
+#divAulaGravada{
+    background: url("../images/aulasGravOn.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+}
+
+#divMatApoio{
+    background: url("../images/matApoio.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+}
+
+#divExerPrat{
+    background: url("../images/exercPrat.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+}
+
+#divForum{
+    background: url("../images/forum.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+}
+
+#divSup{
+    background: url("../images/supAlu.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+}
+
+
+.recursos .logo {
+    width: 100px;
+    border: 1px solid;
+    margin-right: 1rem;
+}
+
+
+.recursos .content{
+    margin-left: 1rem;
+    max-width: 550px;
+}
+
+
+.recursos .divNav {
+    margin-top: 1rem;
+}
+
+
+.recursos .nav .active{
+    background: #56E1FE!important;
+    color: #fff!important;
+}
+
+.recursos .nav-link{
+    /* background: #272F32!important; */
+    /* color: #fff!important; */
+    border: none!important;
+    /* margin-right: 0.3rem; */
+    /* padding: 1rem; */
+    /* min-width: 150px; */
+}
+
+.recursos .titulo{
+    color: #56E1FE;
+}
+
+.recursos .tab-pane{
+    /* background: #2C3942!important; */
+    color: #fff!important;
+    border: none!important;
+}
+
+/* Recursos Fim */
