--- a/CodificaAtividade04/assets/css/main.css
+++ b/CodificaAtividade04/assets/css/main.css
@@ -23,4 +23,15 @@
     color: #FFD742;
     text-shadow: 1px 1px 2px #000;
 }
+
+.textIndent{
+    text-indent: 5%;
+}
+.textJust{
+    text-align: justify;
+}
+
+.materiasSect ul {
+    list-style: none;
+}
 /* Mods Txt F */
