--- a/CodificaAtividade04New/assets/css/index.css
+++ b/CodificaAtividade04New/assets/css/index.css
@@ -1,6 +1,6 @@
 /* Cards I */
 .cardColor {
-    background: #efefef;
+    background: #cecece;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -66,6 +66,7 @@
 #divTextRec{
     background: rgba(0,0,0,0.4);
     width: auto;
+    color: #fff;
 }
 
 #divAulaGravada{
